--- a/src/app/modules/bagian/components/tambah-bagian-baru-dialog/tambah-bagian-baru-dialog.component.html
+++ b/src/app/modules/bagian/components/tambah-bagian-baru-dialog/tambah-bagian-baru-dialog.component.html
@@ -11,8 +11,7 @@
 <wsv wide="16px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KODEBAGIAN"
-            style="width:100px;"></label-input>
+        <label-input label="KODEBAGIAN"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="KODEBAGIAN"
@@ -20,8 +19,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="GRPUNIT"
-            style="width:100px;"></label-input>
+        <label-input label="GRPUNIT"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="GRPUNIT"
@@ -30,8 +28,7 @@
 
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KMRBPJS"
-            style="width:100px;"></label-input>
+        <label-input label="KMRBPJS"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="KMRBPJS"
@@ -45,8 +42,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KODEPMR"
-            style="width:100px;"></label-input>
+        <label-input label="KODEPMR"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -55,8 +51,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="CCCODE"
-            style="width:100px;"></label-input>
+        <label-input label="CCCODE"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -64,8 +59,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="DEPT"
-            style="width:100px;"></label-input>
+        <label-input label="DEPT"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="DEPT"
@@ -78,8 +72,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="NAMABAGIAN"
-            style="width:100px;"></label-input>
+        <label-input label="NAMABAGIAN"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -88,8 +81,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="STSINVENT"
-            style="width:100px;"></label-input>
+        <label-input label="STSINVENT"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="STSINVENT"
@@ -97,8 +89,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="PJAWAB"
-            style="width:100px;"></label-input>
+        <label-input label="PJAWAB"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="PJAWAB"
@@ -113,8 +104,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="FIXCOST"
-            style="width:100px;"></label-input>
+        <label-input label="FIXCOST"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -122,8 +112,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="VARCOST"
-            style="width:100px;"></label-input>
+        <label-input label="VARCOST"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -131,8 +120,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="TGLAKHIR"
-            style="width:100px;"></label-input>
+        <label-input label="TGLAKHIR"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="TGLAKHIR"
@@ -145,8 +133,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="NOAKHIR"
-            style="width:100px;"></label-input>
+        <label-input label="NOAKHIR"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -154,8 +141,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="FLAGBIAYAREGBAG"
-            style="width:100px;"></label-input>
+        <label-input label="FLAGBIAYAREGBAG"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -163,8 +149,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="JMLDOKTER"
-            style="width:100px;"></label-input>
+        <label-input label="JMLDOKTER"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="JMLDOKTER"
@@ -177,8 +162,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="NOSTOKOP"
-            style="width:100px;"></label-input>
+        <label-input label="NOSTOKOP"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -186,8 +170,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="BULANSTOKOP"
-            style="width:100px;"></label-input>
+        <label-input label="BULANSTOKOP"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -196,8 +179,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="BULANSTOKOPUM"
-            style="width:100px;"></label-input>
+        <label-input label="BULANSTOKOPUM"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="BULANSTOKOPUM"
@@ -210,8 +192,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="STATUSSTOKOP"
-            style="width:100px;"></label-input>
+        <label-input label="STATUSSTOKOP"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -219,8 +200,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KODEGUDANG"
-            style="width:100px;"></label-input>
+        <label-input label="KODEGUDANG"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -229,8 +209,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="ANTRI"
-            style="width:100px;"></label-input>
+        <label-input label="ANTRI"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="ANTRI"
@@ -241,8 +220,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="FLAGNOMR"
-            style="width:100px;"></label-input>
+        <label-input label="FLAGNOMR"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -250,8 +228,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="NOSTOKOPUM"
-            style="width:100px;"></label-input>
+        <label-input label="NOSTOKOPUM"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -260,8 +237,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="STATUSSTOKOPUMUM"
-            style="width:100px;"></label-input>
+        <label-input label="STATUSSTOKOPUMUM"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="STATUSSTOKOPUMUM"
@@ -272,8 +248,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="NOSTOKOPM"
-            style="width:100px;"></label-input>
+        <label-input label="NOSTOKOPM"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -281,8 +256,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="BULANSTOKOPM"
-            style="width:100px;"></label-input>
+        <label-input label="BULANSTOKOPM"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -291,8 +265,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="STATUSSTOKOPUMM"
-            style="width:100px;"></label-input>
+        <label-input label="STATUSSTOKOPUMM"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="STATUSSTOKOPUMM"
@@ -303,8 +276,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="STATUSSTOR"
-            style="width:100px;"></label-input>
+        <label-input label="STATUSSTOR"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -312,8 +284,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="GUDANG"
-            style="width:100px;"></label-input>
+        <label-input label="GUDANG"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -322,8 +293,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="INITCODE"
-            style="width:100px;"></label-input>
+        <label-input label="INITCODE"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="INITCODE"
@@ -334,8 +304,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="NOLABEL"
-            style="width:100px;"></label-input>
+        <label-input label="NOLABEL"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -343,8 +312,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="REFUNIT"
-            style="width:100px;"></label-input>
+        <label-input label="REFUNIT"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -353,8 +321,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KODELOKASI"
-            style="width:100px;"></label-input>
+        <label-input label="KODELOKASI"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="KODELOKASI"
@@ -365,8 +332,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="JNSLYN"
-            style="width:100px;"></label-input>
+        <label-input label="JNSLYN"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -374,8 +340,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="WKTTRF"
-            style="width:100px;"></label-input>
+        <label-input label="WKTTRF"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -384,8 +349,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="CCCODE2"
-            style="width:100px;"></label-input>
+        <label-input label="CCCODE2"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="CCCODE2"
@@ -396,8 +360,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="CUTOFF"
-            style="width:100px;"></label-input>
+        <label-input label="CUTOFF"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -405,8 +368,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="TYPEBRG"
-            style="width:100px;"></label-input>
+        <label-input label="TYPEBRG"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -415,8 +377,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="STSORDERLAB"
-            style="width:100px;"></label-input>
+        <label-input label="STSORDERLAB"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="STSORDERLAB"
@@ -427,8 +388,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="PLYNPAS"
-            style="width:100px;"></label-input>
+        <label-input label="PLYNPAS"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -436,8 +396,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="CUTOFF2"
-            style="width:100px;"></label-input>
+        <label-input label="CUTOFF2"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -446,8 +405,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="AUTOADM"
-            style="width:100px;"></label-input>
+        <label-input label="AUTOADM"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="AUTOADM"
@@ -458,8 +416,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KDPOLIBPJS"
-            style="width:100px;"></label-input>
+        <label-input label="KDPOLIBPJS"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -467,8 +424,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="JNSBAGIAN"
-            style="width:100px;"></label-input>
+        <label-input label="JNSBAGIAN"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
@@ -477,8 +433,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KDBAGINDUK"
-            style="width:100px;"></label-input>
+        <label-input label="KDBAGINDUK"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText="KDBAGINDUK"
@@ -490,8 +445,7 @@
 <wsv wide="8px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KDINSTALASI"
-            style="width:100px;"></label-input>
+        <label-input label="KDINSTALASI"></label-input>
         <wsh wide="8px"></wsh>
         <rounded-input width="170px"
             placeholderText=""
@@ -499,8 +453,7 @@
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="KODESMF"
-            style="width:100px;"></label-input>
+        <label-input label="KODESMF"></label-input>
         <wsh wide="8px"></wsh>
         <input-dropdown style="width: 170px;"
             [items]="states"
