--- a/src/app/shared/components/label-input/label-input.component.scss
+++ b/src/app/shared/components/label-input/label-input.component.scss
@@ -2,14 +2,15 @@
 @import '../../../../styles/variables/fonts';
 
 #label-input-address {
-	font-family: $primary-font;
+	font-family: "verdana";
 	font-style: normal;
 	font-weight: normal;
-	font-size: 12px;
-	line-height: 15px;
+	font-size: 10px;
+	line-height: 12px;
 	display: flex;
 	align-items: center;
 	text-align: right;
+	width:120px;
 
 	/* #606060 */
 
