--- a/src/app/modules/bagian/components/info-bagian-card/info-bagian-card.component.html
+++ b/src/app/modules/bagian/components/info-bagian-card/info-bagian-card.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="flex perusahaan-label"
             style="width:12%;float:left;">
-            {{bagian?.KDPOLIBPJS}}
+            {{bagian?.PJAWAB}}
         </div>
 
 
