--- a/src/app/modules/bagian/pages/bagian-layout/bagian-layout.component.html
+++ b/src/app/modules/bagian/pages/bagian-layout/bagian-layout.component.html
@@ -45,7 +45,7 @@
         </div>
         <div class="flex perusahaan-label"
             style="width:12%;float:left;">
-            KDPOLIBPJS
+            PJAWAB
         </div>
 
 
