--- a/src/app/modules/karyawan/components/edit-karyawan-dialog/edit-karyawan-dialog.component.html
+++ b/src/app/modules/karyawan/components/edit-karyawan-dialog/edit-karyawan-dialog.component.html
@@ -190,7 +190,7 @@
         <wsh wide="16px"></wsh>
 
         <rounded-red-button *ngIf="valid()"
-            label="Tambah"
+            label="Update"
             font="14px"
             paddingtop="5px"
             paddingbottom="5px"
@@ -200,7 +200,7 @@
             float="right"></rounded-red-button>
 
         <rounded-gray-button *ngIf="!valid()"
-            label="Tambah"
+            label="Update"
             font="14px"
             paddingtop="5px"
             paddingbottom="5px"
