--- a/src/app/shared/components/rounded-input/rounded-input.component.scss
+++ b/src/app/shared/components/rounded-input/rounded-input.component.scss
@@ -10,7 +10,7 @@
 }
 input {
 	background: transparent;
-	font-family: $primary-font;
+	font-family: "Verdana";
 	font-style: normal;
 	font-weight: normal;
 	font-size: 12px;
@@ -23,7 +23,7 @@ input {
 
 ::placeholder {
 	background: transparent;
-	font-family: $primary-font;
+	font-family: "Verdana";
 	font-style: normal;
 	font-weight: normal;
 	font-size: 12px;
