--- a/src/app/modules/dokter/components/edit-dokter-dialog/edit-dokter-dialog.component.html
+++ b/src/app/modules/dokter/components/edit-dokter-dialog/edit-dokter-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between align-items-center">
     <div id="header">
-        Edit Data Dokter
+        Tambah Dokter Baru
     </div>
     <img id="close-dialog-button"
         (click)="batal()"
@@ -10,19 +10,27 @@
 <wsv wide="12px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Nama Dokter"
+        <label-input label="NAMA DOKTER"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
 
 
         <rounded-input width="298px"
             placeholderText="dr. Sara Tancredi"
-            (onUserInput)="onUserInput($event,'namadokter')"
+            (onUserInput)="onUserInput($event, 'NAMADOKTER')"
             [content]="dokter?.NAMADOKTER"></rounded-input>
 
     </div>
     <wsh wide="16px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
+        <label-input label="KODE DOKTER"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+
+        <rounded-input width="160px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event, 'KODEDOKTER')"
+            [content]="dokter?.KODEDOKTER"></rounded-input>
 
     </div>
 
@@ -33,12 +41,12 @@
 
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Detail Alamat 1"
+        <label-input label="ALAMAT 1"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="788px"
             placeholderText="Jl. Raya "
-            (onUserInput)="onUserInput($event,'alm1dokter')"
+            (onUserInput)="onUserInput($event,'ALM1DOKTER')"
             [content]="dokter?.ALM1DOKTER"></rounded-input>
     </div>
 </div>
@@ -46,12 +54,12 @@
 <wsv wide="12px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Detail Alamat 2"
+        <label-input label="ALAMAT 2"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="788px"
             placeholderText="Jl. Raya "
-            (onUserInput)="onUserInput($event,'alm2dokter')"
+            (onUserInput)="onUserInput($event,'ALM2DOKTER')"
             [content]="dokter?.ALM2DOKTER"></rounded-input>
     </div>
 </div>
@@ -61,18 +69,18 @@
 <wsv wide="12px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="No Rek Dokter"
+        <label-input label="REK DOKTER"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText="00000000"
-            (onUserInput)="onUserInput($event,'norekdr')"
+            (onUserInput)="onUserInput($event,'NOREKDR')"
             [content]="dokter?.NOREKDR"></rounded-input>
 
     </div>
     <wsh wide="24px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Bank"
+        <label-input label="BANK"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <input-dropdown style="width: 298px;"
@@ -87,17 +95,16 @@
 <wsv wide="12px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Jenis Kelamin"
+        <label-input label="JENIS KELAMIN"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <input-dropdown style="width: 298px;"
             [items]="states"
-            idText="jeniskelamin"
-            (onSelect)="onUserInputSelected($event,'jnskelamin')"></input-dropdown>
+            (onSelect)="onUserInputSelected($event,'JNSKELAMIN')"></input-dropdown>
     </div>
     <wsh wide="24px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Spesialisasi"
+        <label-input label="SPESIALISASI"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <input-dropdown style="width: 298px;"
@@ -105,8 +112,7 @@
             placeholderText="Spesialisasi"
             [edited]="editSpesialisasi"
             (editEvent)="editSpesialisasi = false"
-            (onSelect)="onUserInputSelected($event,'kodepmr')"
-            [selected]="dokter?.KDSPESIAL"></input-dropdown>
+            (onSelect)="onUserInputSelected($event,'KODEPMR')"></input-dropdown>
     </div>
 
 </div>
@@ -115,26 +121,150 @@
 <wsv wide="12px"></wsv>
 <div class="d-flex">
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Telp Rumah"
+        <label-input label="NO TELP"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText="000-0000"
-            (onUserInput)="onUserInput($event,'telpdokter')"
+            (onUserInput)="onUserInput($event,'TELPDOKTER')"
             [content]="dokter?.TELPDOKTER"></rounded-input>
     </div>
     <wsh wide="24px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
-        <label-input label="Telp Praktek"
+        <label-input label="TELP PRAKTEK"
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText="0000-0000-0000"
-            (onUserInput)="onUserInput($event,'telppraktek')"
-            [content]="dokter?.TELPPRAKTEK"></rounded-input>
+            (onUserInput)="onUserInput($event,'TELPRAKTEK')"
+            [content]="dokter?.TELPRAKTEK"></rounded-input>
     </div>
 
 </div>
+
+<wsv wide="12px"></wsv>
+<div class="d-flex">
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="POTPAJAK"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'POTPAJAK')"
+            [content]="dokter?.POTPAJAK"></rounded-input>
+    </div>
+    <wsh wide="24px"></wsh>
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="STSKERJADR"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'STSKERJADR')"
+            [content]="dokter?.STSKERJADR"></rounded-input>
+    </div>
+
+</div>
+
+<wsv wide="12px"></wsv>
+<div class="d-flex">
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="MAXPASIEN"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'MAXPASIEN')"
+            [content]="dokter?.MAXPASIEN"></rounded-input>
+    </div>
+    <wsh wide="24px"></wsh>
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="JENISDR"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'JENISDR')"
+            [content]="dokter?.JENISDR"></rounded-input>
+    </div>
+
+</div>
+
+
+<wsv wide="12px"></wsv>
+<div class="d-flex">
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="NMGELARDPN"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'NMGELARDPN')"
+            [content]="dokter?.NMGELARDPN"></rounded-input>
+    </div>
+    <wsh wide="24px"></wsh>
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="NMGELARBLK"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'NMGELARBLK')"
+            [content]="dokter?.NMGELARBLK"></rounded-input>
+    </div>
+
+</div>
+
+
+<wsv wide="12px"></wsv>
+<div class="d-flex">
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="JSDRPASPT"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'JSDRPASPT')"
+            [content]="dokter?.JSDRPASPT"></rounded-input>
+    </div>
+    <wsh wide="24px"></wsh>
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="JSDRPASUMUM"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'JSDRPASUMUM')"
+            [content]="dokter?.JSDRPASUMUM"></rounded-input>
+    </div>
+
+</div>
+
+
+<wsv wide="12px"></wsv>
+<div class="d-flex">
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="PASPTHJ"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'PASPTHJ')"
+            [content]="dokter?.PASPTHJ"></rounded-input>
+    </div>
+    <wsh wide="24px"></wsh>
+    <div class="d-flex justify-content-end align-items-center">
+        <label-input label="PASUMHJ"
+            style="width:130px;"></label-input>
+        <wsh wide="16px"></wsh>
+        <rounded-input width="298px"
+            placeholderText=""
+            (onUserInput)="onUserInput($event,'PASUMHJ')"
+            [content]="dokter?.PASUMHJ"></rounded-input>
+    </div>
+
+</div>
+
 
 
 <wsv wide="12px"></wsv>
@@ -162,7 +292,7 @@
         <wsh wide="16px"></wsh>
 
         <rounded-red-button *ngIf="valid()"
-            label="Simpan"
+            label="Update"
             font="14px"
             paddingtop="5px"
             paddingbottom="5px"
@@ -172,7 +302,7 @@
             float="right"></rounded-red-button>
 
         <rounded-gray-button *ngIf="!valid()"
-            label="Simpan"
+            label="Update"
             font="14px"
             paddingtop="5px"
             paddingbottom="5px"
